index from local

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
     <head>
-        <body>
-            
-        </body>
+        <title>
+            the title
+        </title>
     </head>
-</html>
+        <body>
+            <h1> H1 here</h1>
+          <p>paragraph </p>  
+        </body>
+    </html>
