--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-    <head>
-        <title>
-            the title
-        </title>
-    </head>
-        <body>
-            <h1> H1 here</h1>
-          <p>paragraph </p>  
-        </body>
-    </html>
+<html><head></head><body></body></html>
