--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<html><head></head><body></body></html>
+<html>
+    <head>
+        <title>
+            The Title
+        </title>
+    </head>
+        <body>
+            <h1> H1 here</h1>
+          <p>paragraph </p>  
+        </body>
+    </html>
